--- a/notebooks/unit4/unit4.ipynb
+++ b/notebooks/unit4/unit4.ipynb
@@ -1458,11 +1458,11 @@
       "source": [
         "pixelcopter_hyperparameters = {\n",
         "    \"h_size\": 128,\n",
-        "    \"n_training_episodes\": 50000,\n",
+        "    \"n_training_episodes\": 8000,\n",
         "    \"n_evaluation_episodes\": 10,\n",
         "    \"max_t\": 10000,\n",
         "    \"gamma\": 0.99,\n",
-        "    \"lr\": 1e-4,\n",
+        "    \"lr\": 1e-2,\n",
         "    \"env_id\": env_id,\n",
         "    \"state_space\": s_size,\n",
         "    \"action_space\": a_size,\n",
@@ -1488,7 +1488,7 @@
       "outputs": [],
       "source": [
         "# Create policy and place it to the device\n",
-        "# torch.manual_seed(50)\n",
+        "torch.manual_seed(50)\n",
         "pixelcopter_policy = Policy(pixelcopter_hyperparameters[\"state_space\"], pixelcopter_hyperparameters[\"action_space\"], pixelcopter_hyperparameters[\"h_size\"]).to(device)\n",
         "pixelcopter_optimizer = optim.Adam(pixelcopter_policy.parameters(), lr=pixelcopter_hyperparameters[\"lr\"])"
       ]
@@ -1521,7 +1521,7 @@
     {
       "cell_type": "code",
       "source": [
-        "repo_id = \"\" #TODO Define your repo id {username/Reinforce-{model-id}}\n",
+        "repo_id = \"Punit71/Pixelcopter-PLE-v0\" #TODO Define your repo id {username/Reinforce-{model-id}}\n",
         "push_to_hub(repo_id,\n",
         "                pixelcopter_policy, # The model we want to save\n",
         "                pixelcopter_hyperparameters, # Hyperparameters\n",
